[gd_scene load_steps=29 format=3 uid="uid://dlb87l7gssnq3"]

[ext_resource type="Script" path="res://Scripts/collectable.gd" id="1_dd2hj"]
[ext_resource type="Texture2D" uid="uid://b3o3ue03r6aui" path="res://Items/Orange.png" id="1_rsnqg"]
[ext_resource type="AudioStream" uid="uid://bk2j0yeud5ro2" path="res://Audio/Click.wav" id="3_5ptme"]
[ext_resource type="Texture2D" uid="uid://cljtpo1gfbqyj" path="res://Visual Effects/Collected.png" id="4_wc8ki"]
[ext_resource type="Script" path="res://Scripts/vanish_effect.gd" id="5_4c5cs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u1jud"]
atlas = ExtResource("1_rsnqg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4swqb"]
atlas = ExtResource("1_rsnqg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0oma"]
atlas = ExtResource("1_rsnqg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j44dr"]
atlas = ExtResource("1_rsnqg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kga1"]
atlas = ExtResource("1_rsnqg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iku7v"]
atlas = ExtResource("1_rsnqg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5kak"]
atlas = ExtResource("1_rsnqg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_85go6"]
atlas = ExtResource("1_rsnqg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdqbo"]
atlas = ExtResource("1_rsnqg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5jhg"]
atlas = ExtResource("1_rsnqg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u21l"]
atlas = ExtResource("1_rsnqg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg83h"]
atlas = ExtResource("1_rsnqg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gil5h"]
atlas = ExtResource("1_rsnqg")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxufy"]
atlas = ExtResource("1_rsnqg")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5qbp"]
atlas = ExtResource("1_rsnqg")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj5qy"]
atlas = ExtResource("1_rsnqg")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac27t"]
atlas = ExtResource("1_rsnqg")
region = Rect2(512, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ak3v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1jud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4swqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0oma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j44dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kga1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iku7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85go6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdqbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5jhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u21l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg83h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gil5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxufy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5qbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj5qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac27t")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_nu5kq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orange:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_35lwc"]
resource_name = "bounce"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Orange:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -47), Vector2(0, -25)]
}

[sub_resource type="Animation" id="Animation_fn0vv"]
resource_name = "vanish"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VanishEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pcfct"]
_data = {
"RESET": SubResource("Animation_nu5kq"),
"bounce": SubResource("Animation_35lwc"),
"vanish": SubResource("Animation_fn0vv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wqh0t"]
radius = 20.1246

[node name="Collectable" type="Area2D"]
collision_layer = 0
script = ExtResource("1_dd2hj")

[node name="Orange" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.71875, 2.5)
sprite_frames = SubResource("SpriteFrames_ak3v0")
autoplay = "default"
frame_progress = 0.850611

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pcfct")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wqh0t")

[node name="SoundCollectableCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5ptme")
pitch_scale = 1.2

[node name="VanishEffect" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -9.53674e-07)
scale = Vector2(2.04688, 1.90959)
texture = ExtResource("4_wc8ki")
hframes = 6
script = ExtResource("5_4c5cs")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
